     - Switched to using visibility toggle in Debug class to optimise textbox
       redraws.
     - Changed value of TOP_SCREEN_Y_OFFSET to 512 to enable bitmask checking.
     - ScreenDepthButton uses GraphicsPort for all drawing operations.
     - Tidied up some of the includes and dependencies.
     - Removed SimpleScreen and SimpleWindow classes.


  - New Features:
     - Added vertical slider.
     - Added vertical scrollbar.
     - Added ScrollableBase base class for scrolling gadgets.
     - Removed ScrollableBase functions from ScrollingPanel and added
       ScrollableBase as a base class for ScrollingPanel.
     - Added EVENT_SCROLL to EventHandler.
     - Added _darkColour to Gadget class.
     - Added LinkedList, LinkedListIterator and DynamicArray classes.
     - Removed all STL code.
     - Added event enabling/disabling to Gadget class.
     - Added event enabling/disabling to ScrollingPanel class.
     - Added horizontal slider.
     - Gadgets track calls to erase() and no longer perform a second erase
       without a call to draw() first.
     - Completed ScrollbarVertical class.
     - Added up, down, left and right arrow glyphs.
     - Added Gadget::changeDimensions() to allow move and resize with just one
       redraw.


  V0.29 (20081101)
  
  - Fixes:
     - Windows prevented from being dragged out of top of screen.
     - ScreenTitle and WindowBorderTop make a copy of the text passed into them.
     - BitmapButton's drawing routine offsets its blit origin by 1 to account
       for the gadget's border width if applicable.
     - Replaced most of SuperBitmap's draw(Rect) routine with a call to
       GraphicsPort::drawBitmap().
     - Increased size of window gadgets in demo skin.
     - Updated SuperBitmap to use s16 instead of u16 for co-ordinates.
     - Text::wrap() correctly wraps the last line of text.
     - Fixed more bugs in TextViewer.
     - Removed old Debug methods.
     - Fixed clipping in SuperBitmap draw routines.